<!-- 
/* Copyright (c) 2013 Aaron Kunze (boilerpdx@gmail.com)
 * 
 * Permission is hereby granted, free of charge, to any person obtaining a copy
 * of this software and associated documentation files (the "Software"), to deal
 * in the Software without restriction, including without limitation the rights
 * to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
 * copies of the Software, and to permit persons to whom the Software is
 * furnished to do so, subject to the following conditions:

 * The above copyright notice and this permission notice shall be included in
 * all copies or substantial portions of the Software.

 * THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
 * IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
 * FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
 * AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
 * LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
 * OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
 * THE SOFTWARE.
 */
 -->
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item android:id="@+id/action_new_task" android:title="@string/action_new_task"></item><item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings">
    </item>
    <item android:id="@+id/action_load_astrid" android:orderInCategory="200" android:title="@string/action_load_astrid" android:showAsAction="never"></item>
    <item android:id="@+id/action_delete_database" android:orderInCategory="300" android:showAsAction="never" android:title="@string/action_delete_database"></item>
    <item android:id="@+id/action_backup_database" android:orderInCategory="400" android:showAsAction="never" android:title="@string/action_backup_database"></item>
    

</menu>
